[gd_scene load_steps=7 format=3 uid="uid://cgkmml2ufxnpc"]

[ext_resource type="Script" path="res://scene/instruction/BlockControl/GetLinkInstruction.gd" id="1_0p7dy"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_krkw8"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_xot6c"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_ufnsg"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_upx8s"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_toi7e"]

[node name="GetLinkInstruction" type="Panel"]
script = ExtResource("1_0p7dy")

[node name="BaseRow" parent="." instance=ExtResource("2_krkw8")]

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_xot6c")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Get Link"
script = ExtResource("4_ufnsg")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_upx8s")]

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_toi7e")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "= link# "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("6_toi7e")]
